--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,9 +23,15 @@
   margin-bottom: 5rem;
   display: block;
 
+  @include respond(tab-land) {
+    width: 50%;
+    white-space: nowrap;
+  }
+
   @include respond(tab-port) {
     display: flex;
     justify-content: center;
+    width: 100%;
   }
 }
 
@@ -59,10 +65,10 @@
   margin-bottom: 2rem;
   letter-spacing: 0.2px;
   font-weight: 700;
-  width: 60%;
+  margin-left: -8rem;
 
   @include respond(tab-port) {
-    margin-left: 2rem;
+    margin-left: 4rem;
     margin-top: 1rem;
     width: 100%;
   }
