--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -83,16 +83,18 @@
 }
 
 .about-us__item-header {
+  display: flex;
+  margin-bottom: 2rem;
   @include respond(tab-port) {
-    display: flex;
-    margin-bottom: 2rem;
     background-color: rgba(242, 95, 58, 0.1);
   }
 }
+
 .stories-section {
   width: 100%;
   margin-top: 10rem 0;
   text-align: center;
+  overflow-x: hidden;
 
   @include respond(tab-port) {
     margin-top: 5rem 0;
@@ -106,7 +108,7 @@
   align-items: center;
   margin-top: 15rem;
   padding: 0 10%;
-  height: 40rem;
+  height: 30rem;
   background: url("/images/bg-simplify-section-desktop.svg"), no-repeat,
     $BrightRed;
 
@@ -117,5 +119,6 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    height: 40rem;
   }
 }
